2012-03-13 Jérôme Pasquier  <rainbru@free.fr>

	* skin01/wordpress/header.php: add an anchor to the previous script.
	* skin01/common/createHtml5Elements.js: add the JavaScript hack
	to fix the black menu bug in ie6.

2012-02-16 Jérôme Pasquier  <rainbru@free.fr>

	* skin01/wordpress/footer.php: added login link.

2012-02-16 Jérôme Pasquier  <rainbru@free.fr>

	* skin01/wordpress/header.php: include again common/skin.css
	because of the previous fix.
	* skin01/common/skin.css (#rb-skin01-footer): removed the
	position: relative; attribute because it caused many deadlinks
	in the wordpress theme.

2012-02-04 Jérôme Pasquier  <rainbru@free.fr>

	* skin01/wordpress/pattern/: directory removed.
	* skin01/wordpress/pattern/index.php: moved to skin01/wordpress/.
	* skin01/wordpress/index.html: renamed old_index.html, added to archive
	and kept for referenes.

2012-02-03 Jérôme Pasquier  <rainbru@free.fr>

	* configure.in (AC_OUTPUT): added previous Makefile.
	* skin01/wordpress/pattern/Makefile.am (EXTRA_DIST): added missing
	files to archives.
	* skin01/wordpress/Makefile.am (SUBDIRS): pattern/ was missing.

	* ChangeLog: replaced changelog.dev with a GNU formatted changelog.